force-app/main/default/objects/Apttus_Config2__ProductAttributeGroup__c/Apttus_Config2__ProductAttributeGroup__c.object-meta.xml
<CustomObject>
    <description>Represents a product attribute group that contains attributes shared by products</description>
    <label>Product Attribute Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attribute Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>