force-app/main/default/objects/Apttus_Config2__ProductAttributeGroup__c/fields/Apttus_Config2__AttributeValueMatrixId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AttributeValueMatrixId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute Value Matrix</label>
    <referenceTo>Apttus_Config2__AttributeValueMatrix__c</referenceTo>
    <relationshipLabel>Product Attribute Groups</relationshipLabel>
    <relationshipName>ProductAttributeGroups</relationshipName>
    <type>Lookup</type>
</CustomField>