force-app/main/default/objects/Apttus_Config2__ProductAttributeGroup__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>The description for the product attribute group</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>