force-app/main/default/objects/Apttus_Config2__ProductAttributeGroup__c/fields/Apttus_Config2__ThreeColumnAttributeDisplay__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ThreeColumnAttributeDisplay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you would like to display the attribute details in this group in a three-column fashion. If unchecked the default is one column.</description>
    <inlineHelpText>Check if you would like to display the attribute details in this group in a three-column fashion. If unchecked the default is one column.</inlineHelpText>
    <label>Three Column Attribute Display</label>
    <type>Checkbox</type>
</CustomField>